--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    
+    <header class="main-header">
+
+        <div class="top-header"> 
+            <img src="/images/logo-mercado-liebre.svg" alt="">
+            <input type="text" name="barra-busqueda" id="barra-busqueda">
+            <h2>Comprar en cuotas y sin tarjeta de credito</h2>
+        </div>
+
+        <nav class="bottom-header">
+
+            <ul>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">}Vender</a></li>
+                <li><a href="#"></a>Ayuda</li>
+            </ul>
+            
+            <ul>
+                <li><a href="#">Crea tu cuenta</a></li>
+                <li><a href="#">Ingresa</a></li>
+                <li><a href="#"></a>Mis compras</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="main-Section">
+            <h3>Basado en tu última visita</h3>
+
+            <article class="product">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <p class="price">$6.770</p>
+                <p class="discount">40% OFF</p>
+                <p class="description">Cafetera Moulinex</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-macbook-pro-2019.jpg" alt="">
+                <p class="price">$230.000</p>
+                <p class="discount">20% off</p>
+                <p class="description">MacBook Pro 2019</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                <p class="price">$70.500</p>
+                <p class="discount">10% off</p>
+                <p class="description">Samsung Galaxy S10</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-tv-samsung-smart.jpg" alt="">
+                <p class="price">$23.200</p>
+                <p class="discount">5% off</p>
+                <p class="description">SmartTv Samsung 43"</p>
+            </article>
+
+
+            <h3>Ofertas</h3>
+
+            <article class="product">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <p class="price">$6.770</p>
+                <p class="discount">40% OFF</p>
+                <p class="description">Cafetera Moulinex</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-macbook-pro-2019.jpg" alt="">
+                <p class="price">$230.000</p>
+                <p class="discount">20% off</p>
+                <p class="description">MacBook Pro 2019</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                <p class="price">$70.500</p>
+                <p class="discount">10% off</p>
+                <p class="description">Samsung Galaxy S10</p>
+            </article>
+
+            <article class="product">
+                <img src="/images/img-tv-samsung-smart.jpg" alt="">
+                <p class="price">$23.200</p>
+                <p class="discount">5% off</p>
+                <p class="description">SmartTv Samsung 43"</p>
+            </article>
+
+        </section>
+    </main>
+    <footer>
+        <div class="main-footter">
+            <ul>
+                <li>
+                    <h4>Pagá con tarjeta o en efectivo</h4>
+                    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo enpuntos de pago. ¡Y siempre es seguro!</p>
+                </li>
+                <li>
+                    <h4>Envío gratis desde $ 2.500</h4>
+                    <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+                </li>
+                <li>
+                    <h4>Seguridad, de principio a fin</h4>
+                    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+                </li>
+                <li>
+                    <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
