--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -14,112 +13,162 @@
 <body>
     <header class="main-header">
 
-        <div class="top-header"> 
-            <img src="/images/logo-mercado-liebre.svg" alt="">
-            <input type="text" name="barra-busqueda" id="barra-busqueda">
-            <h2>Comprar en cuotas y sin tarjeta de credito</h2>
+        <div class="top-header">
+             
+            <img class="logo" src="/images/logo-mercado-liebre.svg" alt="">
+
+            <div class="search-bar">
+                
+                <input type="text" name="barra-busqueda" id="barra-busqueda" placeholder=" Barra de busqueda">
+                <i class="fas fa-search"></i>
+            </div>
+
+            <h2 class="copy-navbar">
+                <i class="fas fa-hand-holding-usd"></i>
+                Comprar en cuotas y sin tarjeta de credito
+            </h2>
+
         </div>
 
         <nav class="bottom-header">
 
-            <ul>
+            <ul class="left-bar">
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">}Vender</a></li>
-                <li><a href="#"></a>Ayuda</li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
             </ul>
             
-            <ul>
-                <li><a href="#">Crea tu cuenta</a></li>
-                <li><a href="#">Ingresa</a></li>
-                <li><a href="#"></a>Mis compras</li>
+            <ul class="right-bar">
+                <li><a href="#">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
             </ul>
+
+
+            
         </nav>
+
+        <a href="#" class="burger-menu"><i class="fas fa-bars"></i></a>
+
     </header>
+
     <main>
-        <section class="main-Section">
+        <section class="main-section">
             <h3>Basado en tu última visita</h3>
 
-            <article class="product">
-                <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <p class="price">$6.770</p>
-                <p class="discount">40% OFF</p>
-                <p class="description">Cafetera Moulinex</p>
-            </article>
+            <div class="product-group">
+                <article class="product">
+                    <img  src="/images/img-cafetera-moulinex.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% OFF</p>
+                        <p class="description">Cafetera Moulinex</p>
+                    </div>
+                </article>
 
-            <article class="product">
-                <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <p class="price">$230.000</p>
-                <p class="discount">20% off</p>
-                <p class="description">MacBook Pro 2019</p>
-            </article>
+                <article class="product">
+                    <img  src="/images/img-macbook-pro-2019.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <p class="description">MacBook Pro 2019</p>
+                    </div>
+                </article>
 
-            <article class="product">
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <p class="price">$70.500</p>
-                <p class="discount">10% off</p>
-                <p class="description">Samsung Galaxy S10</p>
-            </article>
+                <article class="product">
+                    <img  src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <p class="description">Samsung Galaxy S10</p>
+                    </div>
+                </article>
 
-            <article class="product">
-                <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p class="price">$23.200</p>
-                <p class="discount">5% off</p>
-                <p class="description">SmartTv Samsung 43"</p>
-            </article>
+                <article class="product">
+                    <img  src="/images/img-tv-samsung-smart.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <p class="description">SmartTv Samsung 43"</p>
+                    </div>
+                </article>
+            </div>
 
 
             <h3>Ofertas</h3>
 
-            <article class="product">
-                <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <p class="price">$6.770</p>
-                <p class="discount">40% OFF</p>
-                <p class="description">Cafetera Moulinex</p>
-            </article>
 
-            <article class="product">
-                <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <p class="price">$230.000</p>
-                <p class="discount">20% off</p>
-                <p class="description">MacBook Pro 2019</p>
-            </article>
+            <div class="product-group">
+                <article class="product">
+                    <img  src="/images/img-cafetera-moulinex.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% OFF</p>
+                        <p class="description">Cafetera Moulinex</p>
+                    </div>
+                </article>
 
-            <article class="product">
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <p class="price">$70.500</p>
-                <p class="discount">10% off</p>
-                <p class="description">Samsung Galaxy S10</p>
-            </article>
+                <article class="product">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <p class="description">MacBook Pro 2019</p>
+                    </div>
+                </article>
 
-            <article class="product">
-                <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p class="price">$23.200</p>
-                <p class="discount">5% off</p>
-                <p class="description">SmartTv Samsung 43"</p>
-            </article>
+                <article class="product">
+                    <img  src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <p class="description">Samsung Galaxy S10</p>
+                    </div>
+                </article>
+
+                <article class="product">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="">
+                    <div class="product-info">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <p class="description">SmartTv Samsung 43"</p>
+                    </div>
+                </article>
+            </div>
 
         </section>
     </main>
     <footer>
-        <div class="main-footter">
-            <ul>
-                <li>
+        <div class="main-footer">
+            <div>
+                <article>
+                    <i class="fas fa-credit-card"></i>
                     <h4>Pagá con tarjeta o en efectivo</h4>
                     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo enpuntos de pago. ¡Y siempre es seguro!</p>
-                </li>
-                <li>
+                </article>
+                <article>
+                    <i class="fas fa-gift"></i>
                     <h4>Envío gratis desde $ 2.500</h4>
                     <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-                </li>
-                <li>
+                </article>
+                <article>
+                    <i class="fas fa-user-shield"></i>
                     <h4>Seguridad, de principio a fin</h4>
                     <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-                </li>
-                <li>
+                </article>
+                <article>
                     <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
-                </li>
-            </ul>
+                </article>
+            </div>
         </div>
     </footer>
 </body>
