login and register

--- a/views/index.html
+++ b/views/index.html
@@ -17,11 +17,11 @@
              
             <img class="logo" src="/images/logo-mercado-liebre.svg" alt="">
 
-            <div class="search-bar">
+            <form action="" method="" class="search-bar">
                 
                 <input type="text" name="barra-busqueda" id="barra-busqueda" placeholder=" Barra de busqueda">
                 <i class="fas fa-search"></i>
-            </div>
+            </form>
 
             <h2 class="copy-navbar">
                 <i class="fas fa-hand-holding-usd"></i>
@@ -40,8 +40,8 @@
             </ul>
             
             <ul class="right-bar">
-                <li><a href="#">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/register">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
             </ul>
 
