--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,6 @@
 .main-header{
     background-color: #EAC926;
     padding: 15px;
-   
 }
 
 .top-header{
@@ -148,12 +147,18 @@
     font-family: 'Roboto',sans-serif;
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 .main-footer div{
     list-style: none;
     text-align: center;
     text-decoration: none;
+}
+
+.main-footer article{
+    margin: 15px;
 }
 
 .main-footer p{
@@ -217,7 +222,8 @@
 
     .product{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        width: 50%;
+        width: 45%;
+        margin: 8px;
     }
 
 
@@ -226,6 +232,7 @@
         flex-wrap: wrap;
         align-items: baseline;
         flex-direction: row;
+        justify-content: center;
     }
 
     .price,.description,.discount{
@@ -240,12 +247,14 @@
 
 @media (min-width: 769px){
     .product{
-        width: 25%; 
+        width: 23%; 
     }
 
     .price,.description,.discount{
         font-size: 14px;
     }
 
-
+    .product-group{
+        justify-content: center;
+    }
 }
