--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
             <ul class="right-bar">
                 <li><a href="/register">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
+                <li><a href="#">Mis compras<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
 
 
