--- a/views/login.html
+++ b/views/login.html
@@ -42,7 +42,7 @@
             <ul class="right-bar">
                 <li><a href="/register">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
             
         </nav>
@@ -52,21 +52,21 @@
     </header>
 
     <main>
-        <div class="conteiner-register">
-            <form action="/" method="GET">
+        <div class="conteiner-form">
+            <form action="/" method="POST">
                 
-                <div>
-                    <label>Nombre de usuario</label>
-                    <input type="text" name="nombre-usuario" required pattern=".{4,}" title="El nombre de usuario debe contener al menos 4 caracteres">
-                </div>
-                
-                <div>
-                    <label>Contraseña</label>
-                    <input type="password" name="password" required pattern=".{8,}" title="La contraseña debe contener al menos 4 caracteres">
-                </div>
-                
-                <button type="reset">Borrar</button>
-                <button type="submit">Enviar</button>
+                    <div>
+                        <label>Nombre de usuario</label>
+                        <input type="text" name="nombre-usuario" required pattern=".{4,}" title="El nombre de usuario debe contener al menos 4 caracteres" class="form-bar">
+                    </div>
+                    
+                    <div>
+                        <label>Contraseña</label>
+                        <input type="password" name="password" required pattern=".{8,}" title="La contraseña debe contener al menos 4 caracteres" class="form-bar">
+                    </div>
+                    <section class="button-section" >
+                        <button class="buttom-send-login "  type="submit">Enviar</button>
+                    </section>
             </form>
 
         </div>
