--- a/views/register.html
+++ b/views/register.html
@@ -42,7 +42,7 @@
             <ul class="right-bar">
                 <li><a href="/register">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i</a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
             
         </nav>
@@ -110,8 +110,8 @@
                     <input type="password" name="confirm-password" class="form-bar" required>
                 </div>
                 <div>
-                    <button type="reset">Borrar</button>
-                    <button type="submit">Enviar</button>
+                    <button class="button" type="reset">Borrar</button>
+                    <button class="button" type="submit">Enviar</button>
                 </div>
             </form>
 
