--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,7 +131,7 @@
 .description{
     display: none;
     display: block;
-
+    
 }
 
 .product-info i{
@@ -142,6 +142,7 @@
 .discount{
     font-size: 16px;
 }
+
 
 /* ------------------------------------- FOOTER------------------------------------------- */
 
@@ -234,7 +235,7 @@
 
 }
 
-.conteiner-form form div button{
+.conteiner-form  .button{
     background-color: #1259c3;
     color: #ebebeb;
     text-align: center;
@@ -243,8 +244,14 @@
     height:  30px;
     margin-right: 15px;
     border: none;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);;
+    transition: all .5s ;
 }
+
+.conteiner-form button:hover{
+    background-color:  #0022AA;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
 
 .user-profile{
     display: flex;
@@ -254,6 +261,7 @@
 .button-section{
     padding: 5px 30px;
 }
+
 .buttom-send-login{
 background-color: #1259c3;
 color: #ebebeb;
@@ -263,7 +271,6 @@ width: 100%;
 height: 30px;
 margin-top: 15px;
 border: none;
-box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
 
@@ -325,9 +332,6 @@ box-shadow: 0px 0px 10px rgb(100, 100, 100);
         justify-content: center;
     }
 
-    /*.discount{
-        width: 90%;
-    }*/
 
     .price,.description,.discount{
         font-size: 18px;
