margin main y banner

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercado Liebre</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -52,7 +52,9 @@
         <a href="#" class="burger-menu"><i class="fas fa-bars"></i></a>
 
     </header>
-
+    <section class="banner">
+        <img src="/images/img-home-banner.jpg" alt="">
+    </section>
     <main>
         <section class="main-section">
             <h3>Basado en tu última visita</h3>
