--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,8 +76,15 @@
     padding: 15px;
 }
 
-/* ----------------------------------------MAIN ------------------------------------*/
+.banner img{
+    display: inline-block;
+    width: 100%;
+}
 
+/* ----------------------------------------MAIN ------------------------------------*/
+main{
+    margin: 15px 0px;
+}
 .main-section{
     width: 90%;
     margin: auto;
